--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "react-three-fiber": "^5.3.18",
+    "three": "^0.125.2",
     "typescript": "^4.1.3",
     "web-vitals": "^1.1.0"
   },
