--- a/source/Makefile
+++ b/source/Makefile
@@ -7,20 +7,29 @@ CFLAGS=-lm -Wall
 
 OBJDIR=build
 
-$(OBJDIR)/erosion.o: erosion.c erosion.h
-	$(CC) $(CFLAGS) -c erosion.c -o $(OBJDIR)/erosion.o
+output: test.o erosion.o noise.o heightmap_gen.o utils.o
+	$(CC) $(CFLAGS) test.o erosion.o noise.o heightmap_gen.o utils.o -o output
 
-$(OBJDIR)/noise.o: noise.c noise.h
-	$(CC) $(CFLAGS) -c noise.c -o $(OBJDIR)/noise.o
+erosion.o: erosion.c erosion.h
+	$(CC) $(CFLAGS) -c erosion.c -o erosion.o
 
-$(OBJDIR)/heightmap_gen.o: heightmap_gen.c heightmap_gen.h
-	$(CC) $(CFLAGS) -c heightmap_gen.c -o $(OBJDIR)/heightmap_gen.o
+noise.o: noise.c noise.h
+	$(CC) $(CFLAGS) -c noise.c -o noise.o
 
-$(OBJDIR)/export.o: export.c export.h
-	$(CC) $(CFLAGS) -c export.c svpng.c -o $(OBJDIR)/export.o
+heightmap_gen.o: heightmap_gen.c heightmap_gen.h
+	$(CC) $(CFLAGS) -c heightmap_gen.c -o heightmap_gen.o
 
+utils.o: export.c export.h
+	$(CC) $(CFLAGS) -c export.c -o utils.o
 
+test.o: test.c
+	$(CC) $(CFLAGS) -c test.c -o test.o
 
 .PHONY: clean
 clean:
-	rm *.o 
+	rm erosion.o
+	rm noise.o
+	rm heightmap_gen.o
+	rm utils.o
+	rm test.o
+	rm output
