Added importing png files

--- a/source/Makefile
+++ b/source/Makefile
@@ -1,34 +1,13 @@
-# Makefile for building the binary
-# currently it builds to native machine executable
-# later it will build to WASM and initiate streams with in the main page
+# Main Make file
+# use make web for emcc to WASM
+# use make local for clang to local executable
 
-CC=clang
-CFLAGS=-Wall -Ofast
+web:
+	make -f makefile-emcc.mk
 
-OBJDIR=build
+local:
+	make -f makefile-clang.mk
 
-output: test.o erosion.o noise.o heightmap_gen.o utils.o
-	$(CC) $(CFLAGS) test.o erosion.o noise.o heightmap_gen.o utils.o -o output
-
-erosion.o: erosion.c erosion.h
-	$(CC) $(CFLAGS) -c erosion.c -o erosion.o
-
-noise.o: noise.c noise.h
-	$(CC) $(CFLAGS) -c noise.c -o noise.o
-
-heightmap_gen.o: heightmap_gen.c heightmap_gen.h
-	$(CC) $(CFLAGS) -c heightmap_gen.c -o heightmap_gen.o
-
-utils.o: export.c export.h
-	$(CC) $(CFLAGS) -c export.c -o utils.o
-
-test.o: test.c
-	$(CC) $(CFLAGS) -c test.c -o test.o
-
-
-.PHONY: clean
 clean:
-	rm *.o
-	rm output
-	rm *.png
-	rm *.obj
+	make -f makefile-clang.mk clean
+	make -f makefile-emcc.mk clean
